fix error message shifting elements around

--- a/age-calculator-app/style.css
+++ b/age-calculator-app/style.css
@@ -54,6 +54,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 6px;
+  position: relative;
 }
 
 .input-label {
@@ -65,7 +66,7 @@ main {
 }
 
 .input-item input {
-  max-width: 100px;
+  max-width: 110px;
   font-size: 1.125rem;
   padding: 10px;
   border: 1px solid var(--clr-light-grey);
@@ -88,6 +89,8 @@ main {
   color: var(--clr-red);
   font-size: 0.6rem;
   font-style: italic;
+  position: absolute;
+  bottom: -1.25rem;
 }
 
 .divider-area {
